[package]
authors = ["murueka <298748+3c1u@users.noreply.github.com>"]
name = "maysick"
version = "0.2.0"
description = "A programming language of directories."
edition = "2018"

[lib]
name = "maysick"
path = "lib/lib.rs"

[[bin]]
name = "maysick"
path = "src/main.rs"

[[bin]]
name = "maylsp"
path = "lsp-server/main.rs"

[dependencies]
clap = "3.1.14"
rand = "0.7.3"
encoding_rs = "^0.8.26"
antlr-rust = "0.1.4"
lazy_static = "1.4.0"
rustc_lexer = "0.1.0"
